Continued History final

--- a/NM_History/Final/Final.tex
+++ b/NM_History/Final/Final.tex
@@ -43,9 +43,9 @@ I'll list them in no particular order with a description behind each.
 \begin{enumerate}
     \item{The name ``New Mexico'' isn't named after the modern country ``Mexico'' but after the {\color{blue}\underline{\href{https://www.sjsu.edu/faculty/watkins/aztecs.htm}{``Valley of Mexico''}}}}
         \paragraph~
-        The Aztec's are, to this day, considered to have been an advanced civilization; part of this meant having the ability to set religious dogma explaining phenomena.
-        As a sort of rule, religious beliefs inspire works of art relating to them, the Aztecs made fine art.
-        
+        The Valley of Mexico has been territory of a few different tribes of past times (in order); {\color{blue}\underline{\href{https://www.history.com/topics/ancient-americas/teotihuacan}{the empire of Teotihuacán}}} (from the years 300 A.D. to 600 A.D.); {\color{blue}\underline{\href{https://www.worldhistory.org/Toltec_Civilization/}{the Toltecs}}} (from around 900 A.D. to 1100 A.D.); and {\color{blue}\underline{\href{https://www.nationalgeographic.org/encyclopedia/aztec-civilization/}{the Aztecs}}} (from 1300 A.D. to around 1600 A.D.).
+        Settlement of the Valley of Mexico, by the Aztecs, was instigated by a shaman, around the time of 1300 A.D., saying to wander until an eagle was found perched on a cactus eating a snake; one such eagle happened to be in the Valley of Mexico.
+        300 years later (1598), the {\color{blue}\underline{\href{https://smarthistory.org/introduction-to-the-spanish-viceroyalties-in-the-americas/}{viceroyalty of New Spain}}}
 \end{enumerate}
 
 %\section*{The Future of New Mexico}
@@ -60,10 +60,15 @@ I'll list them in no particular order with a description behind each.
 \section*{References}
 \begin{enumerate}
     \item{\url{http://rubens.anu.edu.au/raid1/student_projects97/aztec/AztecHistory.html/History1.html}}
+    \item{\url{https://www.worldatlas.com/articles/where-did-new-mexico-get-its-name-from.html}}
+    \item{\url{https://www.britannica.com/place/Viceroyalty-of-New-Spain}}
 \end{enumerate}
-\section*{Hyperlinks}
+\section*{Hyperlinks (In Order)}}
 \begin{enumerate}
     \item{\url{https://www.sjsu.edu/faculty/watkins/aztecs.htm}}
+    \item{\url{https://www.history.com/topics/ancient-americas/teotihuacan}}
+    \item{\url{https://www.worldhistory.org/Toltec_Civilization/}}
+    \item{\url{https://www.nationalgeographic.org/encyclopedia/aztec-civilization/}}
 \end{enumerate}
 
 \end{document}
