--- a/7-World_History/Who am I?.tex
+++ b/7-World_History/Who am I?.tex
@@ -3,6 +3,7 @@
 \usepackage{setspace}
 \usepackage{hyperref}
 \usepackage{lipsum}
+\usepackage{fancyhdr}
 
 \setlength\paperwidth{8.5in}
 \setlength\paperheight{11in}
@@ -16,13 +17,19 @@
 }
 
 \begin{document}
+
 \doublespacing
 
 \begin{titlepage}
     \begin{center}
         {\huge\bfseries{Who Am I?}}\\
-        
+        World History Period 7\\
+        \today
     \end{center}
 \end{titlepage}
+
+\section{Hello}
+
+\lipsum[1-10]
 
 \end{document}
