--- a/7-World_History/Who am I?.tex
+++ b/7-World_History/Who am I?.tex
@@ -22,14 +22,16 @@
 
 \begin{titlepage}
     \begin{center}
+        \vspace*{1.5in}
         {\huge\bfseries{Who Am I?}}\\
-        World History Period 7\\
-        \today
+            {\bfseries{by Jonah Mondragon}}\\
+            World History Period 7\\
+            \today
     \end{center}
 \end{titlepage}
 
-\section{Hello}
+I was born on November 2, 2005 at Taos Holy Cross Hospital.
+I had managed to wrap my neck in the umbilical cord such that I had to be removed from my mom's stomach by c-section.
 
-\lipsum[1-10]
 
 \end{document}
