--- a/7-World_History/Who am I?.tex
+++ b/7-World_History/Who am I?.tex
@@ -4,6 +4,7 @@
 \usepackage{hyperref}
 \usepackage{lipsum}
 \usepackage{fancyhdr}
+\usepackage[margin=1in]{geometry}
 
 \setlength\paperwidth{8.5in}
 \setlength\paperheight{11in}
@@ -23,15 +24,22 @@
 \begin{titlepage}
     \begin{center}
         \vspace*{1.5in}
-        {\huge\bfseries{Who Am I?}}\\
+        {\huge\bfseries{Who Am I? DRAFT \#1}}\\
             {\bfseries{by Jonah Mondragon}}\\
             World History Period 7\\
             \today
     \end{center}
 \end{titlepage}
 
+\section*{Part A: All About Me}
+
 I was born on November 2, 2005 at Taos Holy Cross Hospital.
 I had managed to wrap my neck in the umbilical cord such that I had to be removed from my mom's stomach by c-section.
+Part of my conceptualization involved a custody battle between my mother and father.
+This custody battle forced my father to sell a 1968 Chevrolet Camaro Super Sport in order to pay for his lawyer, I would be driving it around today had he not sold it.
+Long story short, my father won custody over me and I have lived out the first fifteen years of my life in a large house next to the {\color{blue}\underline{\href{https://www.taoscountryclub.com/}{Taos Country Club}}} with him.
 
+I bear crawled before I crawled and, according to my father, ran before I walked.
+It was in the courtroom where my parents allowed their lawyers to fight for the right of raising me, it was the first time I'd seen my father in months <more precise?>; I heard his voice in the court room and ran down the hallway to him as soon as I was out of my moms hold, I was three years old. <fact check this>
 
 \end{document}
