--- a/7-World_History/Who am I?.tex
+++ b/7-World_History/Who am I?.tex
@@ -34,12 +34,25 @@
 \section*{Part A: All About Me}
 
 I was born on November 2, 2005 at Taos Holy Cross Hospital.
-I had managed to wrap my neck in the umbilical cord such that I had to be removed from my mom's stomach by c-section.
+I had managed to wrap my neck in the umbilical cord such that I had to be removed from my 
+    mother's stomach by c-section.
 Part of my conceptualization involved a custody battle between my mother and father.
-This custody battle forced my father to sell a 1968 Chevrolet Camaro Super Sport in order to pay for his lawyer, I would be driving it around today had he not sold it.
-Long story short, my father won custody over me and I have lived out the first fifteen years of my life in a large house next to the {\color{blue}\underline{\href{https://www.taoscountryclub.com/}{Taos Country Club}}} with him.
+This custody battle forced my father to sell a 1968 Chevrolet Camaro Super Sport
+    in order to pay for his lawyer, I would be driving it around today had he not sold it.
+Long story short, my father won custody over me and I have lived out the first fifteen years of my 
+    life in a large house next to the {\color{blue}\underline{\href{https://www.taoscountryclub.com/}{Taos Country Club}}} with him.
 
-I bear crawled before I crawled and, according to my father, ran before I walked.
-It was in the courtroom where my parents allowed their lawyers to fight for the right of raising me, it was the first time I'd seen my father in months <more precise?>; I heard his voice in the court room and ran down the hallway to him as soon as I was out of my moms hold, I was three years old. <fact check this>
+I bear crawled before I crawled normally and, according to my father, ran before I walked.
+In the courtroom where my parents allowed their lawyers to fight for the right of raising me,
+    it was the first time I'd been able to see my father in months; %more precise?%
+    I heard his voice and ran down the courtroom walkway to him as soon as I was out of 
+    my mother's hold, I was three years old. %fact check this>
+The reason for this custody battle boils down to the fact that my mother  ``kidnapped'' me in the
+    attempt to extricate me from the ``abusive'' hands of my father (the exact details of this don't
+    have the need to be related here, but know that all is fine with my situation now).
+This was first from the handful of times that my mother obtained possession of me without the
+    legal authority to do so.
+
+
 
 \end{document}
