--- a/7-World_History/Who am I?.tex
+++ b/7-World_History/Who am I?.tex
@@ -50,9 +50,23 @@ In the courtroom where my parents allowed their lawyers to fight for the right o
 The reason for this custody battle boils down to the fact that my mother  ``kidnapped'' me in the
     attempt to extricate me from the ``abusive'' hands of my father (the exact details of this don't
     have the need to be related here, but know that all is fine with my situation now).
-This was first from the handful of times that my mother obtained possession of me without the
-    legal authority to do so.
+My mother obtained possession of me without the legal authority to do so a handful of times, the
+    exact chronological order of these events is vague at best and the only way to decide of it
+    exactly would be to scrounge through court transcripts and other documents, an endeavor
+    that I don't want to partake in as I have exerted enough mental energy throughout my lifetime
+    being concerned with my early childhood.
 
+The initial arrangement of my custody situation was one that most kids in a situation similar to mine
+    have had, shared custody; my father would have me for a week, then my mother would have me for a week
+    (perhaps it was some other period of time, I can't remember).
+Of the time spent with my father I have quite literally no recollection, they were
+    spent either with my father's ex wife, a woman whom I've grown to know as my grandma or playing video
+    games; I don't remember going to school, it must have been before I was enrolled in anything beyond a
+    daycare, again my memories overlap quite a bit chronologically.
+Come to think of my  mother and have never married.
+
+A woman named Dawn (I believe "Dawn" is short for "Dawna," I know, quite the truncation) at one point was
+    my mother's landlord
 
 
 \end{document}
