--- a/7-World_History/Who am I?.tex
+++ b/7-World_History/Who am I?.tex
@@ -66,7 +66,9 @@ Of the time spent with my father I have quite literally no recollection, they we
 Come to think of my  mother and have never married.
 
 A woman named Dawn (I believe "Dawn" is short for "Dawna," I know, quite the truncation) at one point was
-    my mother's landlord
+    my mother's landlord. Dawn had a treehouse in the backyard on an old tree, I believe it's a chinese elm,
+    the treehouse was removed the last time I saw the property, but I didn't get the best view so I may have
+    just not seen it.
 
 
 \end{document}
