--- a/7-World_History/Who am I?.tex
+++ b/7-World_History/Who am I?.tex
@@ -66,9 +66,10 @@ Of the time spent with my father I have quite literally no recollection, they we
 Come to think of my  mother and have never married.
 
 A woman named Dawn (I believe "Dawn" is short for "Dawna," I know, quite the truncation) at one point was
-    my mother's landlord. Dawn had a treehouse in the backyard on an old tree, I believe it's a chinese elm,
+    my mother's landlord. Dawn had a treehouse in the backyard on an old tree, I believe it's a Chinese elm,
     the treehouse was removed the last time I saw the property, but I didn't get the best view so I may have
-    just not seen it.
-
+    just not seen it. One time inside of the treehouse, on my own, there was a wasp, and I guess the wasp
+    sensed my fear of it because it stung me square on the nose, it was the first time I remember being
+    stung; I descended the latter with a blister on the tip of my nose to my mother and Dawn, Dawn 
 
 \end{document}
