--- a/7-World_History/Who am I?.tex
+++ b/7-World_History/Who am I?.tex
@@ -63,7 +63,7 @@ Of the time spent with my father I have quite literally no recollection, they we
     spent either with my father's ex wife, a woman whom I've grown to know as my grandma or playing video
     games; I don't remember going to school, it must have been before I was enrolled in anything beyond a
     daycare, again my memories overlap quite a bit chronologically.
-Come to think of my  mother and have never married.
+Come to think of it my mother and father have never married.
 
 A woman named Dawn (I believe "Dawn" is short for "Dawna," I know, quite the truncation) at one point was
     my mother's landlord. Dawn had a treehouse in the backyard on an old tree, I believe it's a Chinese elm,
