--- a/6-Honors_Physics/Lowrider_Challenge/lowrider_description.tex
+++ b/6-Honors_Physics/Lowrider_Challenge/lowrider_description.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\usepackage{gensymb}
 \usepackage{titling}
 \usepackage{setspace}
 \usepackage{hyperref}
@@ -32,6 +33,7 @@
 \begin{document}
 
 \doublespacing
+\thispagestyle{empty}
 
 \title{Lowrider Description}
 \author{Jonah Mondragon}
@@ -53,15 +55,11 @@ The interior, though I haven't colored the image, are medium sandalwood colored 
     only result in an immediate retreat upwards.
 Even though the shell will remain the same, the mechanical elements will definitely improve, in this
     particular future-thought lowrider the hydraulic system incorporates a booster not dissimilar to
-    Iron-Man's thruster boots, allowing the car to do a 360\textdegree midair barrel roll, in any 
+    Iron-Man's thruster boots, allowing the car to do a 360$^{\circ}$ midair barrel roll, in any 
     direction and land on it's wheels.
 Some precedence exists that would suggest the ability to take flight in some instances, such as one's
     involving the danger of the passengers, such as a great fall off a cliff; further suggesting an
     implicit sentient presence in the vehicle, but that's just a byproduct of the times I'm envisioning
     for this car.
-
-\begin{center}
-    \textbf{For the final of this assignment, I'll likely design a 1959 Chevrolet El Camino.}
-\end{center}
 
 \end{document}
