World History old geometry and Who Am I?

--- a/7-World_History/Who am I?/Who am I?.tex
+++ b/7-World_History/Who am I?/Who am I?.tex
@@ -35,7 +35,7 @@
 I was born on November 2, 2005 at Taos Holy Cross Hospital.
 I had managed to wrap my neck in the umbilical cord such that I had to be removed from my 
     mother's stomach by c-section.
-Part of my conceptualization involved a custody battle between my mother and father.
+Part of my inception involved a custody battle between my mother and father.
 This custody battle forced my father to sell a 1968 Chevrolet Camaro Super Sport
     in order to pay for his lawyer, I would be driving it around today had he not sold it.
 Long story short, my father won custody over me and I have lived out the first fifteen years of my 
@@ -76,6 +76,6 @@ One time inside of the treehouse, on my own, there was a wasp, and I guess the w
     nose.
 For some reason I associate this memory with bears I believe I asked about why bears like honey or something,
     this association likely came from {\color{blue}\underline{\href{https://winniethepooh.disney.com/}{Winnie
-    The Pooh.}} 
+    The Pooh}}}.
 
 \end{document}
