--- a/7-World_History/Who am I?/Who am I?.tex
+++ b/7-World_History/Who am I?/Who am I?.tex
@@ -33,49 +33,60 @@
 \section*{Part A: All About Me}
 
 I was born on November 2, 2005 at Taos Holy Cross Hospital.
-I had managed to wrap my neck in the umbilical cord such that I had to be removed from my 
-    mother's stomach by c-section.
+I had managed to wrap my neck in the umbilical cord such that I had to be 
+    removed from my mother's stomach by c-section.
 Part of my inception involved a custody battle between my mother and father.
 This custody battle forced my father to sell a 1968 Chevrolet Camaro Super Sport
-    in order to pay for his lawyer, I would be driving it around today had he not sold it.
-Long story short, my father won custody over me and I have lived out the first fifteen years of my 
-    life in a large house next to the {\color{blue}\underline{\href{https://www.taoscountryclub.com/}{Taos Country Club}}} with him.
+    in order to pay for his lawyer, I would be driving it around today had he 
+    not sold it.
+Long story short, my father won custody over me and I have lived out the first
+    fifteen years of my life in a large house next to the {\color{blue}
+    \underline{\href{ https://www.taoscountryclub.com/}{Taos Country Club}}}
+    with him.
 
-I bear crawled before I crawled normally and, according to my father, ran before I walked.
-In the courtroom where my parents allowed their lawyers to fight for the right of raising me,
-    it was the first time I'd been able to see my father in months; %more precise?%
-    I heard his voice and ran down the courtroom walkway to him as soon as I was out of 
-    my mother's hold, I was three years old. %fact check this>
-The reason for this custody battle boils down to the fact that my mother ``kidnapped'' me in the
-    attempt to extricate me from the ``abusive'' hands of my father (the exact details of this don't
-    have the need to be related here, but know that all is fine with my situation now).
-My mother obtained possession of me without the legal authority to do so a handful of times, the
-    exact chronological order of these events is vague at best and the only way to decide of it
-    exactly would be to scrounge through court transcripts and other documents, an endeavor
-    that I don't want to partake in as I have exerted enough mental energy throughout my lifetime
+I bear crawled before I crawled normally and, according to my father, ran before
+    I walked.
+In the courtroom where my parents allowed their lawyers to fight for the right
+    of raising me, it was the first time I'd been able to see my father in 
+    months; %more precise?%
+    I heard his voice and ran down the courtroom walkway to him as soon as I was
+    out of my mother's hold, I was three years old. %fact check this>
+The reason for this custody battle boils down to the fact that my mother
+    ``kidnapped'' me in the attempt to extricate me from the ``abusive'' hands
+    of my father (the exact details of this don't have the need to be related 
+    here, but know that all is fine with my situation now).
+My mother obtained possession of me without the legal authority to do so a
+    handful of times, the exact chronological order of these events is vague at
+    best and the only way to decide of it exactly would be to scrounge through
+    court transcripts and other documents, an endeavor that I don't want to
+    partake in as I have exerted enough mental energy throughout my lifetime
     being concerned with my early childhood.
 
-The initial arrangement of my custody situation was one that most kids in a situation similar to mine
-    have had, shared custody; my father would have me for a week, then my mother would have me for a week
-    (perhaps it was some other period of time, I can't remember).
-Of the time spent with my father I have quite literally no recollection, they were
-    spent either with my father's ex wife, a woman whom I've grown to know as my grandma or playing video
-    games; I don't remember going to school, it must have been before I was enrolled in anything beyond a
-    daycare, again my memories overlap quite a bit chronologically.
+The initial arrangement of my custody situation was one that most kids in a
+    situation similar to mine have had, shared custody; my father would have me
+    for a week, then my mother would have me for a week (perhaps it was some
+    other period of time, I can't remember).
+Of the time spent with my father I have quite literally no recollection, they
+    were spent either with my father's ex wife, a woman whom I've grown to know
+    as my grandma or playing video games; I don't remember going to school, it
+    must have been before I was enrolled in anything beyond a daycare, again my
+    memories overlap quite a bit chronologically.
 Come to think of it my mother and father have never married.
 
-A woman named Dawn (I believe "Dawn" is short for "Dawna," I know, quite the truncation) at one point was
-    my mother's landlord.
-Dawn had a treehouse in the backyard on an old tree, I believe it's a Chinese elm,
-    the treehouse was removed the last time I saw the property, but I didn't get the best view so I may have
-    just not seen it. 
-One time inside of the treehouse, on my own, there was a wasp, and I guess the wasp
-    sensed my fear of it because it stung me square on the nose, it was the first time I remember being
-    stung; I descended the latter with a blister on the tip of my nose to my mother and Dawn, when I entered
-    the threshold of the door with tears dripping down my face my mother and Dawn got honey and put it on my
-    nose.
-For some reason I associate this memory with bears I believe I asked about why bears like honey or something,
-    this association likely came from {\color{blue}\underline{\href{https://winniethepooh.disney.com/}{Winnie
+A woman named Dawn (I believe "Dawn" is short for "Dawna," I know, quite the
+    truncation) at one point was my mother's landlord.
+Dawn had a treehouse in the backyard on an old tree, I believe it's a Chinese
+    elm, the treehouse was removed the last time I saw the property, but I 
+    didn't get the best view so I may have just not seen it. 
+One time inside of the treehouse, on my own, there was a wasp, and I guess the
+    wasp sensed my fear of it because it stung me square on the nose, it was the
+    first time I remember being stung; I descended the latter with a blister on
+    the tip of my nose to my mother and Dawn, when I entered the threshold of
+    the door with tears dripping down my face my mother and Dawn got honey and
+    put it on my nose.
+For some reason I associate this memory with bears I believe I asked about why
+    bears like honey or something, this association likely came from 
+    {\color{blue}\underline{\href{https://winniethepooh.disney.com/}{Winnie
     The Pooh}}}.
 
 \end{document}
