--- a/6-Honors_Physics/Lowrider_Challenge/Final/lowrider_description.tex
+++ b/6-Honors_Physics/Lowrider_Challenge/Final/lowrider_description.tex
@@ -41,25 +41,32 @@
 
 \PutTitle{Physics Period 6}
 
-My choice for the design of a stereotypical lowrider to present my idea for the lowriders of the future
-    stems from my belief that the "lowrider" as we know it today will never change, at least with the
-    type of car we use to make the transformation from a roadster. 
-    The reason I make this conjecture is because of the culture that has surrounded lowriders since 
-    their inception, in my mind, and with a completly subjective statement, cars made today can never 
-    hold a candle the status of current lowriders.
-    The lowrider in my drawing has two fins above the rear lights, similar to a
-    {\color{blue}\underline{\href{http://cascadiaclassics.com/home/2018/1/20/1959-chevrolet-el-camino}{1959 Chevrolet El Camino}}}
+My choice for the design of a stereotypical lowrider to present my idea for the
+    lowriders of the future stems from my belief that the "lowrider" as we know
+    it today will never change, at least with the type of car we use to make the
+    transformation from a roadster. 
+The reason I make this conjecture is because of the culture that has surrounded
+    lowriders since their inception, in my mind, and with a completly subjective
+    statement, cars made today can never hold a candle the status of
+    current lowriders.
+The lowrider in my drawing has two fins above the rear lights, similar to a
+    {\color{blue}\underline{\href
+    {http://cascadiaclassics.com/home/2018/1/20/1959-chevrolet-el-camino}
+    {1959 Chevrolet El Camino}}}
     but without the dramatic V-shape on the rear.
-The interior, though I haven't colored the image, are medium sandalwood colored plushy-cushioned seats,
-    sitting on them gives you a spring sensation, maneuvering your weight in a downward direction will
-    only result in an immediate retreat upwards.
-Even though the shell will remain the same, the mechanical elements will definitely improve, in this
-    particular future-thought lowrider the hydraulic system incorporates a booster not dissimilar to
-    Iron-Man's thruster boots, allowing the car to do a 360$^{\circ}$ midair barrel roll, in any 
-    direction and land on it's wheels.
-Some precedence exists that would suggest the ability to take flight in some instances, such as one's
-    involving the danger of the passengers, such as a great fall off a cliff; further suggesting an
-    implicit sentient presence in the vehicle, but that's just a byproduct of the times I'm envisioning
-    for this car.
+The interior, though I haven't colored the image, are medium sandalwood colored
+    plushy-cushioned seats, sitting on them gives you a spring sensation,
+    maneuvering your weight in a downward direction will only result in an
+    immediate retreat upwards.
+Even though the shell will remain the same, the mechanical elements will
+    definitely improve, in this particular future-thought lowrider the
+    hydraulic system incorporates a booster not dissimilar to
+    Iron-Man's thruster boots, allowing the car to do a 360$^{\circ}$ midair
+    barrel roll, in any direction and land on it's wheels.
+Some precedence exists that would suggest the ability to take flight in some
+    instances, such as one's
+    involving the danger of the passengers, such as a great fall off a cliff;
+    further suggesting an implicit sentient presence in the vehicle, but that's
+    just a byproduct of the times I'm envisioning for this car.
 
 \end{document}
